--- a/kartotherian/sources.yaml
+++ b/kartotherian/sources.yaml
@@ -1,42 +1,53 @@
-v3_source:
+openmaptiles_v3_source:
   uri: tmsource:///data/openmaptiles.tm2source
   overrideInfo:
     attribution: 'Map data © <a href="http://openstreetmap.org/copyright">OpenStreetMap contributors</a>'
 
 # Filter out any small tiles without significant data on or after zoom 10
-v3_substantial:
+openmaptiles_v3_substantial:
   uri: substantial://
   params:
-    source: {ref: v3_source}
+    source: {ref: openmaptiles_v3_source}
     minzoom: 10
     minsize: 500
     layers: [water, landuse]
 
 # If tile has been filtered out by substgen, use overzoom to recreate it
-v3:
-  public: true
-  formats: [pbf]
+openmaptiles_v3_overzoom:
   uri: overzoom://
   params:
-    source: {ref: v3_substantial}
+    source: {ref: openmaptiles_v3_substantial}
+
+openmaptiles_v3:
+  public: true
+  formats: [pbf]
+  uri: cache://
+  params:
+    source: {ref: openmaptiles_v3_overzoom}
   overrideInfo:
     Layer:
     _prefs:
-    tiles: [{env: V3_TILES_URL}]
+    tiles: [{env: OPENMAPTILES_V3_TILES_URL}]
 
-v3_internal:
+openmaptiles_v3_raster:
   public: true
   formats: [pbf]
-  uri: overzoom://
+  uri: overzoom:// # Random, just to get an alias
   params:
-    source: {ref: v3_substantial}
+    source: {ref: openmaptiles_v3}
   overrideInfo:
-    Layer:
-    _prefs:
-    tiles: [{env: OPENMAPTILES_TILES_URL_INTERNAL}]
+    tiles: [{env: OPENMAPTILES_V3_TILES_URL_INTERNAL}]
 
-# View tiles as generated directly from the database. Don't view zoom0-5
+basic_source:
+  public: true
+  formats: [png, jpeg, webp]
+  uri: kartotherian+gl:///
+  params:
+    style: basic_raster
+
 basic:
   public: true
-  formats: [png]
-  uri: gl:///styles/klokantech-basic-gl-style/style-internal.json
+  formats: [png, jpeg, webp]
+  uri: cache://
+  params:
+    source: {ref: basic_source}
