Kartotherian node package refactoring

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     build:
       context: kartotherian
     volumes:
+      - ./kartotherian/modules:/opt/modules
       - ./kartotherian/config.yaml:/opt/kartotherian/packages/kartotherian/config.yaml
       - ./kartotherian/sources.yaml:/opt/kartotherian/packages/kartotherian/sources.yaml
       - ./openmaptiles/build/openmaptiles.tm2source:/data/openmaptiles.tm2source
