--- a/kartotherian/config.yaml
+++ b/kartotherian/config.yaml
@@ -74,26 +74,26 @@ services:
       - "@kartotherian/substantial"
       - "@kartotherian/tilelive-tmsource"
       - "@mapbox/tilejson"
-      - kartotherian_cache
-      - kartotherian_gl
+      - kartotherian_cache # Local cache
+      - kartotherian_gl # Render raster tiles
 
       requestHandlers:
-      - kartotherian_gl_style_server
+      - kartotherian_gl_style_server # Serve Mapbox GL Style
 
       styles:
-        prefix_public: http://localhost:6533
-        prefix_internal: http://kartotherian:6533
+        prefix_public: http://localhost:6533 # External hostname, should be changed to https://example.com
+        prefix_internal: http://kartotherian:6533 # Internal, required for render raster
         paths:
-          styles: /styles
-          fonts: /fonts
+          styles: /styles # Path to styles, in the Docker container
+          fonts: /fonts # Path to fonts, in the Docker container
         styles:
-          basic:
-            style: klokantech-basic-gl-style/style-local.json
-            sources_map:
+          basic: # Name of the style
+            style: klokantech-basic-gl-style/style-local.json # Relative path the style JSON
+            sources_map: # Map of the style source (`mbtiles://{v3}`) to source name from `sources.yaml`
               v3: openmaptiles_v3
-            sources_map_internal:
+            sources_map_internal: # Internal, required for render raster
               v3: openmaptiles_v3_raster
 
       cache:
-        redis:
+        redis: # Use Redis cache on Docker host `redis`
           host: redis
