--- a/kartotherian/config.yaml
+++ b/kartotherian/config.yaml
@@ -75,6 +75,7 @@ services:
       - "@kartotherian/tilelive-tmsource"
       - "@mapbox/tilejson"
       - kartotherian_cache # Local cache
+      - "kartotherian_cache/RedisStore" # Redis cache Storage
       - kartotherian_gl # Render raster tiles
 
       requestHandlers:
@@ -93,7 +94,3 @@ services:
               v3: openmaptiles_v3
             sources_map_internal: # Internal, required for render raster
               v3: openmaptiles_v3_raster
-
-      cache:
-        redis: # Use Redis cache on Docker host `redis`
-          host: redis
