--- a/kartotherian/config.yaml
+++ b/kartotherian/config.yaml
@@ -87,6 +87,7 @@ services:
         paths:
           styles: /styles # Path to styles, in the Docker container
           fonts: /fonts # Path to fonts, in the Docker container
+        font_fallback: Klokantech Noto Sans Regular # Serve this font when the font is not found
         styles:
           basic: # Name of the style
             style: klokantech-basic-gl-style/style-local.json # Relative path the style JSON
