--- a/kartotherian/config.yaml
+++ b/kartotherian/config.yaml
@@ -80,6 +80,7 @@ services:
 
       requestHandlers:
       - kartotherian_gl_style_server # Serve Mapbox GL Style
+      - "kartotherian_cache/expire" # Cache expiration Endpoint
 
       styles:
         prefix_public: http://localhost:6533 # External hostname, should be changed to https://example.com
