Lint kartotherian_cache

--- a/kartotherian/modules/kartotherian_cache/package.json
+++ b/kartotherian/modules/kartotherian_cache/package.json
@@ -4,7 +4,7 @@
   "description": "Cache tiles",
   "main": "cache.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt test"
   },
   "repository": "makinacorpus/makina-maps",
   "keywords": [
@@ -23,5 +23,12 @@
     "redis": "^2.8.0",
     "@kartotherian/err": "^0.0.4",
     "@kartotherian/input-validator": "^0.0.6"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-kartotherian": "^0.0.5",
+    "grunt": "^1.0.2",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-eslint": "^20.1.0"
   }
 }
