Move external URL config from env to config

--- a/kartotherian/config.yaml
+++ b/kartotherian/config.yaml
@@ -65,7 +65,17 @@ services:
       # expose_version: false
 
       # Kartotherian variables and sources
-      variables: {}
+      variables:
+        OPENMAPTILES_V3_TILES_URLS:
+        - http://localhost:6533/openmaptiles_v3/{z}/{x}/{y}.pbf
+        - http://127.0.0.1:6533/openmaptiles_v3/{z}/{x}/{y}.pbf
+        - http://[::1]:6533/openmaptiles_v3/{z}/{x}/{y}.pbf
+        OPENMAPTILES_V3_TILES_URLS_INTERNAL:
+        - http://kartotherian:6533/openmaptiles_v3_raster/{z}/{x}/{y}.pbf
+        BASIC_TILES_URLS:
+        - http://localhost:6533/basic/{z}/{x}/{y}.png
+        - http://127.0.0.1:6533/basic/{z}/{x}/{y}.png
+        - http://[::1]:6533/basic/{z}/{x}/{y}.png
       sources: sources.yaml
 
       modules:
