Replace tilelive-tmstyle by tilelive-pgquery

--- a/kartotherian/Dockerfile
+++ b/kartotherian/Dockerfile
@@ -23,6 +23,7 @@ COPY modules /opt/modules
 RUN lerna add "kartotherian_gl_style_server@/opt/modules/kartotherian_gl_style_server"
 RUN lerna add "kartotherian_sources_list_server@/opt/modules/kartotherian_sources_list_server"
 RUN lerna add "kartotherian_gl@/opt/modules/kartotherian_gl"
+RUN lerna add tilelive-pgquery
 
 WORKDIR /opt/kartotherian/packages/kartotherian
 COPY config.yaml .
