--- a/kartotherian/sources.yaml
+++ b/kartotherian/sources.yaml
@@ -3,21 +3,6 @@ openmaptiles_v3_source:
   overrideInfo:
     attribution: 'Map data © <a href="http://openstreetmap.org/copyright">OpenStreetMap contributors</a>'
 
-# Filter out any small tiles without significant data on or after zoom 10
-openmaptiles_v3_substantial:
-  uri: substantial://
-  params:
-    source: {ref: openmaptiles_v3_source}
-    minzoom: 10
-    minsize: 500
-    layers: [water, landuse]
-
-# If tile has been filtered out by substgen, use overzoom to recreate it
-openmaptiles_v3_overzoom:
-  uri: overzoom://
-  params:
-    source: {ref: openmaptiles_v3_substantial}
-
 openmaptiles_v3_cache:
   uri: redis://
   params:
@@ -29,7 +14,7 @@ openmaptiles_v3:
   formats: [pbf]
   uri: cache://
   params:
-    source: {ref: openmaptiles_v3_overzoom}
+    source: {ref: openmaptiles_v3_source}
     storage: {ref: openmaptiles_v3_cache}
     http_headers:
       Content-Type: application/x-protobuf
@@ -45,11 +30,18 @@ openmaptiles_v3:
 openmaptiles_v3_raster:
   public: true
   formats: [pbf]
-  uri: overzoom:// # Random, just to get an alias
+  uri: cache://
   params:
-    source: {ref: openmaptiles_v3}
+    source: {ref: openmaptiles_v3_source}
+    storage: {ref: openmaptiles_v3_cache}
+    http_headers:
+      Content-Type: application/x-protobuf
+      x-tilelive-contains-data: true
+      Content-Encoding: gzip
   overrideInfo:
-    tiles: {var: OPENMAPTILES_V3_TILES_URLS_INTERNAL}
+    Layer:
+    _prefs:
+    tiles: {var: OPENMAPTILES_V3_TILES_URLS_INTERNAL} # Duplicate cache config to change this URL
 
 basic_source:
   uri: kartotherian+gl:///
