Include tile expire directly in ngnix, watch for expire update

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -3,4 +3,10 @@ FROM xdrum/nginx-extras
 RUN apt update && \
     apt install -y \
         curl \
+        inotify-tools \
         jq
+
+COPY run.sh /
+COPY expire.sh /
+
+CMD ["/run.sh"]
