--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,7 +1,11 @@
-FROM xdrum/nginx-extras
+# FROM nginx
 
-RUN apt update && \
-    apt install -y \
+# nginx + module ngx_cache_purge
+FROM nullunit/nginx-cache-purge
+
+RUN apk update && \
+    apk add \
+        bash \
         curl \
         inotify-tools \
         jq
