--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,7 +17,7 @@ http {
             proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
             proxy_buffering on;
             proxy_cache_lock on;
-            proxy_cache_purge EXPIRE from 127.0.0.1;
+            proxy_cache_purge EXPIRE from 127.0.0.1; # From ngx_cache_purge module
         }
     }
 }
