Add limits into nginx config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,15 +1,26 @@
 events {
-    worker_connections 100000;
+    worker_connections 1000;
 }
 
 http {
     proxy_cache_path /cache levels=1:2 keys_zone=cache:10m inactive=30d max_size=1m;
 
+    limit_req_zone $binary_remote_addr zone=user_tile_rate_limit:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=user_other_rate_limit:10m rate=20r/s;
+
+    upstream kartotherian_tiles {
+        server kartotherian:6533 max_conns=128;
+    }
+
+    upstream kartotherian_other {
+        server kartotherian:6533;
+    }
+
     server {
         server_name nginx;
 
-        location / {
-            proxy_pass http://kartotherian:6533;
+        location ~ .*/[0-9]+/[0-9]+/[0-9]+\.(pbf|png|jpeg|webp)$ {
+            proxy_pass http://kartotherian_tiles;
             proxy_cache cache;
             proxy_cache_valid 200 30d;
             proxy_set_header Host $host;
@@ -18,6 +29,22 @@ http {
             proxy_buffering on;
             proxy_cache_lock on;
             proxy_cache_purge EXPIRE from 127.0.0.1; # From ngx_cache_purge module
+
+            limit_req zone=user_tile_rate_limit burst=30 nodelay;
+        }
+
+        location / {
+            proxy_pass http://kartotherian_other;
+            proxy_cache cache;
+            proxy_cache_valid 200 30d;
+            proxy_set_header Host $host;
+            proxy_cache_key $request_uri;
+            proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
+            proxy_buffering on;
+            proxy_cache_lock on;
+            proxy_cache_purge EXPIRE from 127.0.0.1; # From ngx_cache_purge module
+
+            limit_req zone=user_other_rate_limit burst=30 nodelay;
         }
     }
 }
