--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,6 +19,21 @@ http {
     server {
         server_name nginx;
 
+        # Rater tile >= z15, no expiration from OSM update
+        location ~ .*/[0-9]+/[0-9]+/(1[5-9]|2[0-9])\.(png|jpeg|webp)$ {
+            proxy_pass http://kartotherian_tiles;
+            proxy_cache cache;
+            proxy_cache_valid 200 12h;
+            proxy_set_header Host $host;
+            proxy_cache_key $request_uri;
+            proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
+            proxy_buffering on;
+            proxy_cache_lock on;
+
+            limit_req zone=user_tile_rate_limit burst=15 nodelay;
+        }
+
+        # Vector tile and raster <= 14
         location ~ .*/[0-9]+/[0-9]+/[0-9]+\.(pbf|png|jpeg|webp)$ {
             proxy_pass http://kartotherian_tiles;
             proxy_cache cache;
@@ -33,6 +48,8 @@ http {
             limit_req zone=user_tile_rate_limit burst=30 nodelay;
         }
 
+        # Other static and database less resources
+        # HTML, CSS, JS, style, font, sprites
         location / {
             proxy_pass http://kartotherian_other;
             proxy_cache cache;
