--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,6 +17,7 @@ http {
     }
 
     server {
+        listen 0.0.0.0:80;
         server_name nginx;
 
         # Rater tile >= z15, no expiration from OSM update
@@ -43,7 +44,6 @@ http {
             proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
             proxy_buffering on;
             proxy_cache_lock on;
-            proxy_cache_purge EXPIRE from 127.0.0.1; # From ngx_cache_purge module
 
             limit_req zone=user_tile_rate_limit burst=30 nodelay;
         }
@@ -62,6 +62,20 @@ http {
             proxy_cache_purge EXPIRE from 127.0.0.1; # From ngx_cache_purge module
 
             limit_req zone=user_other_rate_limit burst=30 nodelay;
+        }
+    }
+
+    server {
+        listen localhost:81;
+        server_name nginx_internal;
+
+        # Vector tile and raster <= 14
+        location ~ .*/[0-9]+/[0-9]+/[0-9]+\.(pbf|png|jpeg|webp)$ {
+            proxy_cache cache;
+            proxy_cache_key $request_uri;
+            proxy_buffering on;
+            proxy_cache_lock on;
+            proxy_cache_purge EXPIRE from 127.0.0.1; # From ngx_cache_purge module
         }
     }
 }
