--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,21 +8,21 @@ http {
     limit_req_zone $binary_remote_addr zone=user_tile_rate_limit:10m rate=10r/s;
     limit_req_zone $binary_remote_addr zone=user_other_rate_limit:10m rate=20r/s;
 
-    upstream kartotherian_tiles {
-        server kartotherian:6533 max_conns=128;
+    upstream postserve {
+        server postserve:8090 max_conns=128;
     }
 
-    upstream kartotherian_other {
-        server kartotherian:6533;
+    upstream tileserver-gl {
+        server tileserver-gl;
     }
 
     server {
         listen 0.0.0.0:80;
         server_name nginx;
 
-        # Rater tile >= z15, no expiration from OSM update
-        location ~ .*/[0-9]+/[0-9]+/(1[5-9]|2[0-9])\.(png|jpeg|webp)$ {
-            proxy_pass http://kartotherian_tiles;
+        # Raster tile >= z15, no expiration from OSM update
+        location ~ /styles/.*/[0-9]+/[0-9]+/(1[5-9]|2[0-9])\.(png|jpeg|webp)$ {
+            proxy_pass http://tileserver-gl;
             proxy_cache cache;
             proxy_cache_valid 200 12h;
             proxy_set_header Host $host;
@@ -34,9 +34,25 @@ http {
             limit_req zone=user_tile_rate_limit burst=15 nodelay;
         }
 
-        # Vector tile and raster <= 14
-        location ~ .*/[0-9]+/[0-9]+/[0-9]+\.(pbf|png|jpeg|webp)$ {
-            proxy_pass http://kartotherian_tiles;
+        # Raster tile <= 14
+        location ~ /styles/.*/[0-9]+/[0-9]+/([0-9]+)\.(png|jpeg|webp)$ {
+            proxy_pass http://tileserver-gl;
+            proxy_cache cache;
+            proxy_cache_valid 200 30d;
+            proxy_set_header Host $host;
+            proxy_cache_key $request_uri;
+            proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
+            proxy_buffering on;
+            proxy_cache_lock on;
+
+            limit_req zone=user_tile_rate_limit burst=30 nodelay;
+        }
+
+
+        # Vector tile, tilejson
+        rewrite ^/openmaptiles/v3/tiles.json$ /openmaptiles/v3/ last;
+        location ~ /openmaptiles/v3/(?<postserve_path>.*)$ {
+            proxy_pass http://postserve/$postserve_path;
             proxy_cache cache;
             proxy_cache_valid 200 30d;
             proxy_set_header Host $host;
@@ -51,7 +67,7 @@ http {
         # Other static and database less resources
         # HTML, CSS, JS, style, font, sprites
         location / {
-            proxy_pass http://kartotherian_other;
+            proxy_pass http://tileserver-gl;
             proxy_cache cache;
             proxy_cache_valid 200 30d;
             proxy_set_header Host $host;
