--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,12 +21,12 @@ http {
         server_name nginx;
 
         # Raster tile >= z15, no expiration from OSM update
-        location ~ /styles/.*/[0-9]+/[0-9]+/(1[5-9]|2[0-9])\.(png|jpeg|webp)$ {
+        location ~ /styles/(?<tile_path>.*/[0-9]+/[0-9]+/(1[5-9]|2[0-9])\.(png|jpeg|webp))$ {
             proxy_pass http://tileserver-gl;
             proxy_cache cache;
             proxy_cache_valid 200 12h;
-            proxy_set_header Host $host;
-            proxy_cache_key $request_uri;
+            proxy_set_header Host $http_host;
+            proxy_cache_key $tile_path;
             proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
             proxy_buffering on;
             proxy_cache_lock on;
@@ -35,12 +35,12 @@ http {
         }
 
         # Raster tile <= 14
-        location ~ /styles/.*/[0-9]+/[0-9]+/([0-9]+)\.(png|jpeg|webp)$ {
+        location ~ /styles/(?<tile_path>.*/[0-9]+/[0-9]+/[0-9]+\.(png|jpeg|webp))$ {
             proxy_pass http://tileserver-gl;
             proxy_cache cache;
             proxy_cache_valid 200 30d;
-            proxy_set_header Host $host;
-            proxy_cache_key $request_uri;
+            proxy_set_header Host $http_host;
+            proxy_cache_key $tile_path;
             proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
             proxy_buffering on;
             proxy_cache_lock on;
@@ -48,15 +48,14 @@ http {
             limit_req zone=user_tile_rate_limit burst=30 nodelay;
         }
 
-
         # Vector tile, tilejson
-        rewrite ^/openmaptiles/v3/tiles.json$ /openmaptiles/v3/ last;
-        location ~ /openmaptiles/v3/(?<postserve_path>.*)$ {
+        rewrite ^/data/v3/([0-9]+/[0-9]+/[0-9]+\.pbf)$ /data/v3/tiles/$1 last;
+        location ~ /data/v3/(?<postserve_path>.*)$ {
             proxy_pass http://postserve/$postserve_path;
             proxy_cache cache;
-            proxy_cache_valid 200 30d;
-            proxy_set_header Host $host;
-            proxy_cache_key $request_uri;
+            proxy_cache_valid 200 204 30d;
+            proxy_set_header Host $http_host;
+            proxy_cache_key v3/$postserve_path;
             proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
             proxy_buffering on;
             proxy_cache_lock on;
@@ -68,14 +67,14 @@ http {
         # HTML, CSS, JS, style, font, sprites
         location / {
             proxy_pass http://tileserver-gl;
-            proxy_cache cache;
-            proxy_cache_valid 200 30d;
-            proxy_set_header Host $host;
-            proxy_cache_key $request_uri;
-            proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
+            # proxy_cache cache;
+            # proxy_cache_valid 200 30d;
+            proxy_set_header Host $http_host;
+            # proxy_cache_key $request_uri;
+            # proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
             proxy_buffering on;
-            proxy_cache_lock on;
-            proxy_cache_purge EXPIRE from 127.0.0.1; # From ngx_cache_purge module
+            # proxy_cache_lock on;
+            # proxy_cache_purge EXPIRE from 127.0.0.1; # From ngx_cache_purge module
 
             limit_req zone=user_other_rate_limit burst=30 nodelay;
         }
@@ -86,9 +85,9 @@ http {
         server_name nginx_internal;
 
         # Vector tile and raster <= 14
-        location ~ .*/[0-9]+/[0-9]+/[0-9]+\.(pbf|png|jpeg|webp)$ {
+        location ~ (?<tile_path>.*/[0-9]+/[0-9]+/[0-9]+\.(pbf|png|jpeg|webp))$ {
             proxy_cache cache;
-            proxy_cache_key $request_uri;
+            proxy_cache_key $tile_path;
             proxy_buffering on;
             proxy_cache_lock on;
             proxy_cache_purge EXPIRE from 127.0.0.1; # From ngx_cache_purge module
