--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "openmaptiles"]
 	path = openmaptiles
 	url = https://github.com/frodrigo/openmaptiles.git
+[submodule "tileserver-gl/tileserver-gl"]
+	path = tileserver-gl/tileserver-gl
+	url = https://github.com/frodrigo/tileserver-gl.git
