--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,13 @@ version: '2.1'
 
 services:
   tileserver-gl:
-    image: maptiler/tileserver-gl
+    build:
+      context: tileserver-gl/tileserver-gl
     volumes:
       - ./tileserver-gl:/data
+      - ./tileserver-gl/tileserver-gl/src:/usr/src/app/src
+      - ./tileserver-gl/static/public/index.html:/usr/src/app/public/templates/index.tmpl
+      - ./tileserver-gl/static/public:/usr/src/app/public/resources
     networks:
       - openmaptiles_conn
 
